Fixed the GDPR modal bug. z-index: 1000;

--- a/src/css/components/GDPR.css
+++ b/src/css/components/GDPR.css
@@ -8,6 +8,7 @@
     text-align: center;
     border-radius: 0.5rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 
 
     display: flex;
